finally fixed the fucking stupidity with the cut off triangle points. only took a fucking hour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ button {
     margin-bottom: 1rem;
 }
 
+#game-area {
+    margin-top: 2rem;
+}
+
 /* Shapes */
 
 .shape {
@@ -44,14 +48,14 @@ button {
 
 .cross {
     height:100px;
-    width: 20px;
+    width: 25px;
     position: relative;
     background-color:#555
 }
 .cross:after {
     content:"";
     height:100px;
-    width:20px;
+    width:25px;
     left: 0px;
     position: absolute;
     transform: rotate(90deg);
